--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
+									<a href="winterfall.html" class="image">
+										<img src="images/gallery/Winterfall/logo_Winterfall_tall.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Winterfall</h3>
+										<p>Mix between Open-World Action-RPG and Town Management. Made with Unity3D. Project in my internship at Clan Latria. I worked on the player’s movement, the RPG stats and the inventory system.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
 									<a href="make-the-hero.html" class="image">
 										<img src="images/gallery/Make_The_Hero/logo_Make_the_Hero_tall.png" alt="" />
 									</a>
