--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
 									</div>
 								</article>
 								<article>
+									<a href="cop-academy.html" class="image">
+										<img src="images/gallery/CopAcademy/Logo.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Cop Academy</h3>
+										<p>VR (HTC Vive) Party Game in the cop universe available on Steam for free. Made with Unity3D and SteamVR. Project at RUBIKA with me, another game programmer and 3 game designers in 5 months. I made half of the mini-games and a part of the macro.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
 									<a href="winterfall.html" class="image">
 										<img src="images/gallery/Winterfall/logo_Winterfall_tall.png" alt="" />
 									</a>
@@ -84,18 +96,6 @@
 										<p>Local multiplayer game. Made with Unity3D. 
 											Made for the Global Game Jam in January 2018 with me, 3 other programmers and 2 game designers in 48 hours.
 											The theme was "Transmission".</p>
-										<ul class="actions">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="cop-academy.html" class="image">
-										<img src="images/gallery/CopAcademy/Logo.png" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Cop Academy</h3>
-										<p>VR (HTC Vive) Party Game in the cop universe. Made with Unity3D and SteamVR. Project at RUBIKA with me, another game programmer and 3 game designers in 5 months. I made half of the mini-games and a part of the macro.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
