--- a/cop-academy.html
+++ b/cop-academy.html
@@ -95,7 +95,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/steve-delgrange/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:s.delgrange@rubika-edu.com" class="icon style2 fa-envelope"><span class="label">Email</span>s.delgrange@rubika-edu.com</a></li>
+								<li><a href="mailto:steve.delgrange59144@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span>steve.delgrange59144@gmail.com</a></li>
 								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span>+33 6 31 41 75 21</p></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
