--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Steve Delgrange</h2>
-							<p>Serious, calm and a quick learner. As a 5th year student, I am looking for a 6 month internship in Gameplay Programming, 
-								starting in July 2019. I am particularly interested in VR, procedural generation and systemic gameplay.</p>
+							<p>Autonomous, serious, calm and a quick learner. As a 5th year student, I am looking for a 6 month internship in Gameplay Programming, 
+								starting in July 2019. I am particularly interested in developing the architectures and also by the usage of innovative technologies.</p>
 							<ul class="actions vertical">
 									<li><a href="cv.html" class="button big wide smooth-scroll-middle">CV</a></li>
 								</ul>
@@ -159,7 +159,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/steve-delgrange/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:s.delgrange@rubika-edu.com" class="icon style2 fa-envelope"><span class="label">Email</span>s.delgrange@rubika-edu.com</a></li>
+								<li><a href="mailto:steve.delgrange59144@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span>steve.delgrange59144@gmail.com</a></li>
 								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span>+33 6 31 41 75 21</p></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
