--- a/make-the-hero.html
+++ b/make-the-hero.html
@@ -44,7 +44,7 @@
 
 					<div id="videodiv">
 						<iframe style="display:block; width: 95%; margin: 0 auto;"  height="100%" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen 
-							src="https://www.youtube.com/embed/NMf88UaW_z4">
+							src="https://www.youtube.com/embed/u303wOWvJ2c">
 						</iframe>
 						<!--<video style="display:block; width: 70%; margin: 0 auto;" controls>
 							<source src="assets/videos/Make_the_hero_prototype.mp4" type="video/mp4">
@@ -107,7 +107,7 @@
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/steve-delgrange/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto:s.delgrange@rubika-edu.com" class="icon style2 fa-envelope"><span class="label">Email</span>s.delgrange@rubika-edu.com</a></li>
+								<li><a href="mailto:steve.delgrange59144@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span>steve.delgrange59144@gmail.com</a></li>
 								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span>+33 6 31 41 75 21</p></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
